<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/choice_tittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/choice_tittle"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/percent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/percent" />

    <Button
        android:id="@+id/cover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cover" />

    <Button
        android:id="@+id/introduce"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/introduce" />

    <Button
        android:id="@+id/transaction_cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transaction_cost" />

</LinearLayout>